--- a/server/.env_example
+++ b/server/.env_example
@@ -1,3 +1,5 @@
 SERVER_PORT=3333
 JWT_SECRET=secret
 MONGO_URI=mongodb+srv://xxxxxxxxxxxx:xxxxxxxxxxxxxxxxxxxx
+ALLOWED_METHODS="GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS"
+ALLOWED_ORIGIN="http://localhost:5173,http://localhost:3000,http://localhost:8000,http://localhost:3333,http://localhost:5432"
