Using bcrypt instead of bun

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "vercel-build": "echo building"
   },
   "devDependencies": {
+    "@types/bcrypt": "latest",
     "@types/bun": "latest",
     "@types/cors": "latest",
     "@types/express": "latest",
@@ -18,6 +19,9 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "bcrypt": "latest",
+    "jackspeak": "2.1.1",
+    "string-width": "latest",
     "cors": "latest",
     "express": "latest",
     "jsonwebtoken": "latest",
