feat: jackson added + mongodb cred + user model & repository

--- a/server_java/src/main/resources/application.properties
+++ b/server_java/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=TaskSync
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=10010
+spring.data.mongodb.database=test
+spring.data.mongodb.user=falcon71181
+spring.data.mongodb.password=password
