feat: lombok , auth controller , security dependency

--- a/server_java/src/main/resources/application.properties
+++ b/server_java/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=TaskSync
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=10010
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
-spring.data.mongodb.user=falcon71181
-spring.data.mongodb.password=password
+# spring.data.mongodb.user=mongodb
+# spring.data.mongodb.password=password
+spring.data.mongodb.auto-index-creation=true
