--- a/server_java/pom.xml
+++ b/server_java/pom.xml
@@ -26,14 +26,25 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
     <dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-</dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+    <dependency>
+		  <groupId>org.projectlombok</groupId>
+		  <artifactId>lombok</artifactId>
+		  <version>1.18.32</version>
+		  <scope>provided</scope>
+	  </dependency>
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>3.3.1</version>
+    </dependency>
 	</dependencies>
 
 	<build>
